beta-v2.01: add border radius and vertical gap and fixed div heights

--- a/styles/stylesass.scss
+++ b/styles/stylesass.scss
@@ -21,4 +21,7 @@ body {
       }
     }
   }
+  .content-row {
+    height: 500px;
+  }
 }
